src/test/deca/context/invalid/DupVarDecl1.deca
//Test invalide: Declaration de la meme variable 2 fois
//Resultat: Erreur ligne 5

{
    int a, a;
}